<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presenter.activity.MainActivity">

    <data>

        <variable
            name="behavior"
            type="com.eighthours.flow.presenter.behavior.ReconcileBehavior" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_line"
            android:gravity="center_vertical"
            android:text="@{behavior.name}"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:gravity="end"
            android:hint="@string/hint_amount"
            android:inputType="numberSigned"
            android:maxLength="13"
            android:maxLines="1"
            android:selection="@{behavior.amount.length}"
            android:text="@={behavior.amount.text}"
            android:textAppearance="?android:attr/textAppearanceLarge">

            <requestFocus />
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/reconcile"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:enabled="@{behavior.ok.enabled}"
                android:onClick="@{view -> behavior.ok.execute(view)}"
                android:text="@string/ok" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/reconcile"
                android:layout_toStartOf="@id/reconcile"
                android:onClick="@{view -> behavior.cancel.execute(view)}"
                android:text="@string/cancel" />

        </RelativeLayout>
    </LinearLayout>
</layout>
